// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VDatePicker.js should match snapshot with allowed dates as array 1`] = `

<tbody>
  <tr>
    <td>
    </td>
    <td>
    </td>
    <td>
    </td>
    <td>
      <button type="button"
              class="btn btn--raised btn--icon btn--disabled"
      >
        <span class="btn__content">
          1
        </span>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--raised btn--icon btn--disabled"
      >
        <span class="btn__content">
          2
        </span>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--raised btn--icon btn--disabled"
      >
        <span class="btn__content">
          3
        </span>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--raised btn--icon btn--disabled"
      >
        <span class="btn__content">
          4
        </span>
      </button>
    </td>
  </tr>
  <tr>
    <td>
      <button type="button"
              class="btn btn--raised btn--icon btn--disabled"
      >
        <span class="btn__content">
          5
        </span>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--raised btn--icon"
      >
        <span class="btn__content">
          6
        </span>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--raised btn--icon btn--active accent"
      >
        <span class="btn__content">
          7
        </span>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--raised btn--icon btn--disabled"
      >
        <span class="btn__content">
          8
        </span>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--raised btn--icon btn--disabled"
      >
        <span class="btn__content">
          9
        </span>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--raised btn--icon btn--disabled"
      >
        <span class="btn__content">
          10
        </span>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--raised btn--icon btn--disabled"
      >
        <span class="btn__content">
          11
        </span>
      </button>
    </td>
  </tr>
  <tr>
    <td>
      <button type="button"
              class="btn btn--raised btn--icon btn--disabled"
      >
        <span class="btn__content">
          12
        </span>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--raised btn--icon btn--disabled"
      >
        <span class="btn__content">
          13
        </span>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--raised btn--icon btn--disabled"
      >
        <span class="btn__content">
          14
        </span>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--raised btn--icon btn--disabled"
      >
        <span class="btn__content">
          15
        </span>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--raised btn--icon btn--disabled"
      >
        <span class="btn__content">
          16
        </span>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--raised btn--icon btn--disabled"
      >
        <span class="btn__content">
          17
        </span>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--raised btn--icon btn--disabled"
      >
        <span class="btn__content">
          18
        </span>
      </button>
    </td>
  </tr>
  <tr>
    <td>
      <button type="button"
              class="btn btn--raised btn--icon btn--disabled"
      >
        <span class="btn__content">
          19
        </span>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--raised btn--icon btn--disabled"
      >
        <span class="btn__content">
          20
        </span>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--raised btn--icon btn--disabled"
      >
        <span class="btn__content">
          21
        </span>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--raised btn--icon btn--disabled"
      >
        <span class="btn__content">
          22
        </span>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--raised btn--icon btn--disabled"
      >
        <span class="btn__content">
          23
        </span>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--raised btn--icon btn--disabled"
      >
        <span class="btn__content">
          24
        </span>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--raised btn--icon btn--disabled"
      >
        <span class="btn__content">
          25
        </span>
      </button>
    </td>
  </tr>
  <tr>
    <td>
      <button type="button"
              class="btn btn--raised btn--icon btn--disabled"
      >
        <span class="btn__content">
          26
        </span>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--raised btn--icon btn--disabled"
      >
        <span class="btn__content">
          27
        </span>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--raised btn--icon btn--disabled"
      >
        <span class="btn__content">
          28
        </span>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--raised btn--icon btn--disabled"
      >
        <span class="btn__content">
          29
        </span>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--raised btn--icon btn--disabled"
      >
        <span class="btn__content">
          30
        </span>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--raised btn--icon btn--disabled"
      >
        <span class="btn__content">
          31
        </span>
      </button>
    </td>
  </tr>
  <tr>
    <td>
      &nbsp;
    </td>
  </tr>
</tbody>

`;

exports[`VDatePicker.js should match snapshot with allowed dates as function 1`] = `

<tbody>
  <tr>
    <td>
    </td>
    <td>
    </td>
    <td>
    </td>
    <td>
      <button type="button"
              class="btn btn--raised btn--icon"
      >
        <span class="btn__content">
          1
        </span>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--raised btn--icon btn--disabled"
      >
        <span class="btn__content">
          2
        </span>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--raised btn--icon btn--disabled"
      >
        <span class="btn__content">
          3
        </span>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--raised btn--icon btn--disabled"
      >
        <span class="btn__content">
          4
        </span>
      </button>
    </td>
  </tr>
  <tr>
    <td>
      <button type="button"
              class="btn btn--raised btn--icon btn--disabled"
      >
        <span class="btn__content">
          5
        </span>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--raised btn--icon btn--disabled"
      >
        <span class="btn__content">
          6
        </span>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--raised btn--icon btn--active btn--disabled accent"
      >
        <span class="btn__content">
          7
        </span>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--raised btn--icon btn--disabled"
      >
        <span class="btn__content">
          8
        </span>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--raised btn--icon btn--disabled"
      >
        <span class="btn__content">
          9
        </span>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--raised btn--icon btn--disabled"
      >
        <span class="btn__content">
          10
        </span>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--raised btn--icon"
      >
        <span class="btn__content">
          11
        </span>
      </button>
    </td>
  </tr>
  <tr>
    <td>
      <button type="button"
              class="btn btn--raised btn--icon btn--disabled"
      >
        <span class="btn__content">
          12
        </span>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--raised btn--icon btn--disabled"
      >
        <span class="btn__content">
          13
        </span>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--raised btn--icon btn--disabled"
      >
        <span class="btn__content">
          14
        </span>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--raised btn--icon btn--disabled"
      >
        <span class="btn__content">
          15
        </span>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--raised btn--icon btn--disabled"
      >
        <span class="btn__content">
          16
        </span>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--raised btn--icon btn--disabled"
      >
        <span class="btn__content">
          17
        </span>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--raised btn--icon btn--disabled"
      >
        <span class="btn__content">
          18
        </span>
      </button>
    </td>
  </tr>
  <tr>
    <td>
      <button type="button"
              class="btn btn--raised btn--icon btn--disabled"
      >
        <span class="btn__content">
          19
        </span>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--raised btn--icon btn--disabled"
      >
        <span class="btn__content">
          20
        </span>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--raised btn--icon"
      >
        <span class="btn__content">
          21
        </span>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--raised btn--icon btn--disabled"
      >
        <span class="btn__content">
          22
        </span>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--raised btn--icon btn--disabled"
      >
        <span class="btn__content">
          23
        </span>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--raised btn--icon btn--disabled"
      >
        <span class="btn__content">
          24
        </span>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--raised btn--icon btn--disabled"
      >
        <span class="btn__content">
          25
        </span>
      </button>
    </td>
  </tr>
  <tr>
    <td>
      <button type="button"
              class="btn btn--raised btn--icon btn--disabled"
      >
        <span class="btn__content">
          26
        </span>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--raised btn--icon btn--disabled"
      >
        <span class="btn__content">
          27
        </span>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--raised btn--icon btn--disabled"
      >
        <span class="btn__content">
          28
        </span>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--raised btn--icon btn--disabled"
      >
        <span class="btn__content">
          29
        </span>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--raised btn--icon btn--disabled"
      >
        <span class="btn__content">
          30
        </span>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--raised btn--icon"
      >
        <span class="btn__content">
          31
        </span>
      </button>
    </td>
  </tr>
  <tr>
    <td>
      &nbsp;
    </td>
  </tr>
</tbody>

`;

exports[`VDatePicker.js should match snapshot with allowed dates as object 1`] = `

<tbody>
  <tr>
    <td>
    </td>
    <td>
    </td>
    <td>
    </td>
    <td>
      <button type="button"
              class="btn btn--raised btn--icon btn--disabled"
      >
        <span class="btn__content">
          1
        </span>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--raised btn--icon"
      >
        <span class="btn__content">
          2
        </span>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--raised btn--icon"
      >
        <span class="btn__content">
          3
        </span>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--raised btn--icon"
      >
        <span class="btn__content">
          4
        </span>
      </button>
    </td>
  </tr>
  <tr>
    <td>
      <button type="button"
              class="btn btn--raised btn--icon"
      >
        <span class="btn__content">
          5
        </span>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--raised btn--icon"
      >
        <span class="btn__content">
          6
        </span>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--raised btn--icon btn--active accent"
      >
        <span class="btn__content">
          7
        </span>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--raised btn--icon"
      >
        <span class="btn__content">
          8
        </span>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--raised btn--icon"
      >
        <span class="btn__content">
          9
        </span>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--raised btn--icon"
      >
        <span class="btn__content">
          10
        </span>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--raised btn--icon btn--disabled"
      >
        <span class="btn__content">
          11
        </span>
      </button>
    </td>
  </tr>
  <tr>
    <td>
      <button type="button"
              class="btn btn--raised btn--icon btn--disabled"
      >
        <span class="btn__content">
          12
        </span>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--raised btn--icon btn--disabled"
      >
        <span class="btn__content">
          13
        </span>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--raised btn--icon btn--disabled"
      >
        <span class="btn__content">
          14
        </span>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--raised btn--icon btn--disabled"
      >
        <span class="btn__content">
          15
        </span>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--raised btn--icon btn--disabled"
      >
        <span class="btn__content">
          16
        </span>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--raised btn--icon btn--disabled"
      >
        <span class="btn__content">
          17
        </span>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--raised btn--icon btn--disabled"
      >
        <span class="btn__content">
          18
        </span>
      </button>
    </td>
  </tr>
  <tr>
    <td>
      <button type="button"
              class="btn btn--raised btn--icon btn--disabled"
      >
        <span class="btn__content">
          19
        </span>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--raised btn--icon btn--disabled"
      >
        <span class="btn__content">
          20
        </span>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--raised btn--icon btn--disabled"
      >
        <span class="btn__content">
          21
        </span>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--raised btn--icon btn--disabled"
      >
        <span class="btn__content">
          22
        </span>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--raised btn--icon btn--disabled"
      >
        <span class="btn__content">
          23
        </span>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--raised btn--icon btn--disabled"
      >
        <span class="btn__content">
          24
        </span>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--raised btn--icon btn--disabled"
      >
        <span class="btn__content">
          25
        </span>
      </button>
    </td>
  </tr>
  <tr>
    <td>
      <button type="button"
              class="btn btn--raised btn--icon btn--disabled"
      >
        <span class="btn__content">
          26
        </span>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--raised btn--icon btn--disabled"
      >
        <span class="btn__content">
          27
        </span>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--raised btn--icon btn--disabled"
      >
        <span class="btn__content">
          28
        </span>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--raised btn--icon btn--disabled"
      >
        <span class="btn__content">
          29
        </span>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--raised btn--icon btn--disabled"
      >
        <span class="btn__content">
          30
        </span>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--raised btn--icon btn--disabled"
      >
        <span class="btn__content">
          31
        </span>
      </button>
    </td>
  </tr>
  <tr>
    <td>
      &nbsp;
    </td>
  </tr>
</tbody>

`;

exports[`VDatePicker.js should match snapshot with colored picker 1`] = `

<div class="picker picker--date card"
     style="height: auto;"
     data-ripple="false"
>
  <div class="picker__title orange darken-1">
    <div class="picker--date__title-year">
      2005
    </div>
    <div class="picker--date__title-date active">
      <div>
        Tue, Nov 1
      </div>
    </div>
  </div>
  <div class="picker__body">
    <div class="picker--date__header">
      <div class="picker--date__header-selector">
        <button type="button"
                class="btn btn--icon"
                data-ripple="true"
        >
          <div class="btn__content">
            <i aria-hidden="true"
               class="material-icons icon"
               style="font-size: 24px;"
            >
              chevron_left
            </i>
          </div>
        </button>
        <div class="picker--date__header-selector-date">
          <strong class="primary--text">
            November 2005
          </strong>
        </div>
        <button type="button"
                class="btn btn--icon"
                data-ripple="true"
        >
          <div class="btn__content">
            <i aria-hidden="true"
               class="material-icons icon"
               style="font-size: 24px;"
            >
              chevron_right
            </i>
          </div>
        </button>
      </div>
    </div>
    <div class="picker--date__table">
      <table>
        <thead>
          <tr>
            <th>
              S
            </th>
            <th>
              M
            </th>
            <th>
              T
            </th>
            <th>
              W
            </th>
            <th>
              T
            </th>
            <th>
              F
            </th>
            <th>
              S
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td>
            </td>
            <td>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon btn--active primary"
              >
                <span class="btn__content">
                  1
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon"
              >
                <span class="btn__content">
                  2
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon"
              >
                <span class="btn__content">
                  3
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon"
              >
                <span class="btn__content">
                  4
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon"
              >
                <span class="btn__content">
                  5
                </span>
              </button>
            </td>
          </tr>
          <tr>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon"
              >
                <span class="btn__content">
                  6
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon"
              >
                <span class="btn__content">
                  7
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon"
              >
                <span class="btn__content">
                  8
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon"
              >
                <span class="btn__content">
                  9
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon"
              >
                <span class="btn__content">
                  10
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon"
              >
                <span class="btn__content">
                  11
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon"
              >
                <span class="btn__content">
                  12
                </span>
              </button>
            </td>
          </tr>
          <tr>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon"
              >
                <span class="btn__content">
                  13
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon"
              >
                <span class="btn__content">
                  14
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon"
              >
                <span class="btn__content">
                  15
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon"
              >
                <span class="btn__content">
                  16
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon"
              >
                <span class="btn__content">
                  17
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon"
              >
                <span class="btn__content">
                  18
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon"
              >
                <span class="btn__content">
                  19
                </span>
              </button>
            </td>
          </tr>
          <tr>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon"
              >
                <span class="btn__content">
                  20
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon"
              >
                <span class="btn__content">
                  21
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon"
              >
                <span class="btn__content">
                  22
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon"
              >
                <span class="btn__content">
                  23
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon"
              >
                <span class="btn__content">
                  24
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon"
              >
                <span class="btn__content">
                  25
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon"
              >
                <span class="btn__content">
                  26
                </span>
              </button>
            </td>
          </tr>
          <tr>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon"
              >
                <span class="btn__content">
                  27
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon"
              >
                <span class="btn__content">
                  28
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon"
              >
                <span class="btn__content">
                  29
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon"
              >
                <span class="btn__content">
                  30
                </span>
              </button>
            </td>
          </tr>
          <tr>
            <td>
              &nbsp;
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>

`;

exports[`VDatePicker.js should match snapshot with colored picker 2`] = `

<div class="picker picker--date card"
     style="height: auto;"
     data-ripple="false"
>
  <div class="picker__title orange darken-1">
    <div class="picker--date__title-year">
      2005
    </div>
    <div class="picker--date__title-date active">
      <div>
        Tue, Nov 1
      </div>
    </div>
  </div>
  <div class="picker__body">
    <div class="picker--date__header">
      <div class="picker--date__header-selector">
        <button type="button"
                class="btn btn--icon"
                data-ripple="true"
        >
          <div class="btn__content">
            <i aria-hidden="true"
               class="material-icons icon"
               style="font-size: 24px;"
            >
              chevron_left
            </i>
          </div>
        </button>
        <div class="picker--date__header-selector-date">
          <strong class="orange--text text--darken-1">
            November 2005
          </strong>
        </div>
        <button type="button"
                class="btn btn--icon"
                data-ripple="true"
        >
          <div class="btn__content">
            <i aria-hidden="true"
               class="material-icons icon"
               style="font-size: 24px;"
            >
              chevron_right
            </i>
          </div>
        </button>
      </div>
    </div>
    <div class="picker--date__table">
      <table>
        <thead>
          <tr>
            <th>
              S
            </th>
            <th>
              M
            </th>
            <th>
              T
            </th>
            <th>
              W
            </th>
            <th>
              T
            </th>
            <th>
              F
            </th>
            <th>
              S
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td>
            </td>
            <td>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon btn--active orange darken-1"
              >
                <span class="btn__content">
                  1
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon"
              >
                <span class="btn__content">
                  2
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon"
              >
                <span class="btn__content">
                  3
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon"
              >
                <span class="btn__content">
                  4
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon"
              >
                <span class="btn__content">
                  5
                </span>
              </button>
            </td>
          </tr>
          <tr>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon"
              >
                <span class="btn__content">
                  6
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon"
              >
                <span class="btn__content">
                  7
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon"
              >
                <span class="btn__content">
                  8
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon"
              >
                <span class="btn__content">
                  9
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon"
              >
                <span class="btn__content">
                  10
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon"
              >
                <span class="btn__content">
                  11
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon"
              >
                <span class="btn__content">
                  12
                </span>
              </button>
            </td>
          </tr>
          <tr>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon"
              >
                <span class="btn__content">
                  13
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon"
              >
                <span class="btn__content">
                  14
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon"
              >
                <span class="btn__content">
                  15
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon"
              >
                <span class="btn__content">
                  16
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon"
              >
                <span class="btn__content">
                  17
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon"
              >
                <span class="btn__content">
                  18
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon"
              >
                <span class="btn__content">
                  19
                </span>
              </button>
            </td>
          </tr>
          <tr>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon"
              >
                <span class="btn__content">
                  20
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon"
              >
                <span class="btn__content">
                  21
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon"
              >
                <span class="btn__content">
                  22
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon"
              >
                <span class="btn__content">
                  23
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon"
              >
                <span class="btn__content">
                  24
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon"
              >
                <span class="btn__content">
                  25
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon"
              >
                <span class="btn__content">
                  26
                </span>
              </button>
            </td>
          </tr>
          <tr>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon"
              >
                <span class="btn__content">
                  27
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon"
              >
                <span class="btn__content">
                  28
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon"
              >
                <span class="btn__content">
                  29
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon"
              >
                <span class="btn__content">
                  30
                </span>
              </button>
            </td>
          </tr>
          <tr>
            <td>
              &nbsp;
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>

`;

exports[`VDatePicker.js should match snapshot with dark theme 1`] = `

<div class="picker picker--date card theme--dark"
     style="height: auto;"
     data-ripple="false"
>
  <div class="picker__title">
    <div class="picker--date__title-year">
      2013
    </div>
    <div class="picker--date__title-date active">
      <div>
        Tue, May 7
      </div>
    </div>
  </div>
  <div class="picker__body">
    <div class="picker--date__header">
      <div class="picker--date__header-selector">
        <button type="button"
                class="btn btn--icon theme--dark"
                data-ripple="true"
        >
          <div class="btn__content">
            <i aria-hidden="true"
               class="material-icons icon"
               style="font-size: 24px;"
            >
              chevron_left
            </i>
          </div>
        </button>
        <div class="picker--date__header-selector-date">
          <strong class="accent--text">
            May 2013
          </strong>
        </div>
        <button type="button"
                class="btn btn--icon theme--dark"
                data-ripple="true"
        >
          <div class="btn__content">
            <i aria-hidden="true"
               class="material-icons icon"
               style="font-size: 24px;"
            >
              chevron_right
            </i>
          </div>
        </button>
      </div>
    </div>
    <div class="picker--date__table">
      <table>
        <thead>
          <tr>
            <th>
              S
            </th>
            <th>
              M
            </th>
            <th>
              T
            </th>
            <th>
              W
            </th>
            <th>
              T
            </th>
            <th>
              F
            </th>
            <th>
              S
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td>
            </td>
            <td>
            </td>
            <td>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon theme--dark"
              >
                <span class="btn__content">
                  1
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon theme--dark"
              >
                <span class="btn__content">
                  2
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon theme--dark"
              >
                <span class="btn__content">
                  3
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon theme--dark"
              >
                <span class="btn__content">
                  4
                </span>
              </button>
            </td>
          </tr>
          <tr>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon theme--dark"
              >
                <span class="btn__content">
                  5
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon theme--dark"
              >
                <span class="btn__content">
                  6
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon btn--active theme--dark accent"
              >
                <span class="btn__content">
                  7
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon theme--dark"
              >
                <span class="btn__content">
                  8
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon theme--dark"
              >
                <span class="btn__content">
                  9
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon theme--dark"
              >
                <span class="btn__content">
                  10
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon theme--dark"
              >
                <span class="btn__content">
                  11
                </span>
              </button>
            </td>
          </tr>
          <tr>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon theme--dark"
              >
                <span class="btn__content">
                  12
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon theme--dark"
              >
                <span class="btn__content">
                  13
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon theme--dark"
              >
                <span class="btn__content">
                  14
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon theme--dark"
              >
                <span class="btn__content">
                  15
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon theme--dark"
              >
                <span class="btn__content">
                  16
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon theme--dark"
              >
                <span class="btn__content">
                  17
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon theme--dark"
              >
                <span class="btn__content">
                  18
                </span>
              </button>
            </td>
          </tr>
          <tr>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon theme--dark"
              >
                <span class="btn__content">
                  19
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon theme--dark"
              >
                <span class="btn__content">
                  20
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon theme--dark"
              >
                <span class="btn__content">
                  21
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon theme--dark"
              >
                <span class="btn__content">
                  22
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon theme--dark"
              >
                <span class="btn__content">
                  23
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon theme--dark"
              >
                <span class="btn__content">
                  24
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon theme--dark"
              >
                <span class="btn__content">
                  25
                </span>
              </button>
            </td>
          </tr>
          <tr>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon theme--dark"
              >
                <span class="btn__content">
                  26
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon theme--dark"
              >
                <span class="btn__content">
                  27
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon theme--dark"
              >
                <span class="btn__content">
                  28
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon theme--dark"
              >
                <span class="btn__content">
                  29
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon theme--dark"
              >
                <span class="btn__content">
                  30
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon theme--dark"
              >
                <span class="btn__content">
                  31
                </span>
              </button>
            </td>
          </tr>
          <tr>
            <td>
              &nbsp;
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>

`;

exports[`VDatePicker.js should match snapshot with default settings 1`] = `

<div class="picker picker--date card"
     style="height: auto;"
     data-ripple="false"
>
  <div class="picker__title primary">
    <div class="picker--date__title-year">
      2013
    </div>
    <div class="picker--date__title-date active">
      <div>
        Tue, May 7
      </div>
    </div>
  </div>
  <div class="picker__body">
    <div class="picker--date__header">
      <div class="picker--date__header-selector">
        <button type="button"
                class="btn btn--icon"
                data-ripple="true"
        >
          <div class="btn__content">
            <i aria-hidden="true"
               class="material-icons icon"
               style="font-size: 24px;"
            >
              chevron_left
            </i>
          </div>
        </button>
        <div class="picker--date__header-selector-date">
          <strong class="accent--text">
            May 2013
          </strong>
        </div>
        <button type="button"
                class="btn btn--icon"
                data-ripple="true"
        >
          <div class="btn__content">
            <i aria-hidden="true"
               class="material-icons icon"
               style="font-size: 24px;"
            >
              chevron_right
            </i>
          </div>
        </button>
      </div>
    </div>
    <div class="picker--date__table">
      <table>
        <thead>
          <tr>
            <th>
              S
            </th>
            <th>
              M
            </th>
            <th>
              T
            </th>
            <th>
              W
            </th>
            <th>
              T
            </th>
            <th>
              F
            </th>
            <th>
              S
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td>
            </td>
            <td>
            </td>
            <td>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon"
              >
                <span class="btn__content">
                  1
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon"
              >
                <span class="btn__content">
                  2
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon"
              >
                <span class="btn__content">
                  3
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon"
              >
                <span class="btn__content">
                  4
                </span>
              </button>
            </td>
          </tr>
          <tr>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon"
              >
                <span class="btn__content">
                  5
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon"
              >
                <span class="btn__content">
                  6
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon btn--active accent"
              >
                <span class="btn__content">
                  7
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon"
              >
                <span class="btn__content">
                  8
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon"
              >
                <span class="btn__content">
                  9
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon"
              >
                <span class="btn__content">
                  10
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon"
              >
                <span class="btn__content">
                  11
                </span>
              </button>
            </td>
          </tr>
          <tr>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon"
              >
                <span class="btn__content">
                  12
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon"
              >
                <span class="btn__content">
                  13
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon"
              >
                <span class="btn__content">
                  14
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon"
              >
                <span class="btn__content">
                  15
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon"
              >
                <span class="btn__content">
                  16
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon"
              >
                <span class="btn__content">
                  17
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon"
              >
                <span class="btn__content">
                  18
                </span>
              </button>
            </td>
          </tr>
          <tr>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon"
              >
                <span class="btn__content">
                  19
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon"
              >
                <span class="btn__content">
                  20
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon"
              >
                <span class="btn__content">
                  21
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon"
              >
                <span class="btn__content">
                  22
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon"
              >
                <span class="btn__content">
                  23
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon"
              >
                <span class="btn__content">
                  24
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon"
              >
                <span class="btn__content">
                  25
                </span>
              </button>
            </td>
          </tr>
          <tr>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon"
              >
                <span class="btn__content">
                  26
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon"
              >
                <span class="btn__content">
                  27
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon"
              >
                <span class="btn__content">
                  28
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon"
              >
                <span class="btn__content">
                  29
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon"
              >
                <span class="btn__content">
                  30
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon"
              >
                <span class="btn__content">
                  31
                </span>
              </button>
            </td>
          </tr>
          <tr>
            <td>
              &nbsp;
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>

`;

exports[`VDatePicker.js should match snapshot with first day of week 1`] = `

<div class="picker--date__table">
  <table>
    <thead>
      <tr>
        <th>
          T
        </th>
        <th>
          W
        </th>
        <th>
          T
        </th>
        <th>
          F
        </th>
        <th>
          S
        </th>
        <th>
          S
        </th>
        <th>
          M
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
        </td>
        <td>
          <button type="button"
                  class="btn btn--raised btn--icon"
          >
            <span class="btn__content">
              1
            </span>
          </button>
        </td>
        <td>
          <button type="button"
                  class="btn btn--raised btn--icon"
          >
            <span class="btn__content">
              2
            </span>
          </button>
        </td>
        <td>
          <button type="button"
                  class="btn btn--raised btn--icon"
          >
            <span class="btn__content">
              3
            </span>
          </button>
        </td>
        <td>
          <button type="button"
                  class="btn btn--raised btn--icon"
          >
            <span class="btn__content">
              4
            </span>
          </button>
        </td>
        <td>
          <button type="button"
                  class="btn btn--raised btn--icon"
          >
            <span class="btn__content">
              5
            </span>
          </button>
        </td>
        <td>
          <button type="button"
                  class="btn btn--raised btn--icon"
          >
            <span class="btn__content">
              6
            </span>
          </button>
        </td>
      </tr>
      <tr>
        <td>
          <button type="button"
                  class="btn btn--raised btn--icon btn--active accent"
          >
            <span class="btn__content">
              7
            </span>
          </button>
        </td>
        <td>
          <button type="button"
                  class="btn btn--raised btn--icon"
          >
            <span class="btn__content">
              8
            </span>
          </button>
        </td>
        <td>
          <button type="button"
                  class="btn btn--raised btn--icon"
          >
            <span class="btn__content">
              9
            </span>
          </button>
        </td>
        <td>
          <button type="button"
                  class="btn btn--raised btn--icon"
          >
            <span class="btn__content">
              10
            </span>
          </button>
        </td>
        <td>
          <button type="button"
                  class="btn btn--raised btn--icon"
          >
            <span class="btn__content">
              11
            </span>
          </button>
        </td>
        <td>
          <button type="button"
                  class="btn btn--raised btn--icon"
          >
            <span class="btn__content">
              12
            </span>
          </button>
        </td>
        <td>
          <button type="button"
                  class="btn btn--raised btn--icon"
          >
            <span class="btn__content">
              13
            </span>
          </button>
        </td>
      </tr>
      <tr>
        <td>
          <button type="button"
                  class="btn btn--raised btn--icon"
          >
            <span class="btn__content">
              14
            </span>
          </button>
        </td>
        <td>
          <button type="button"
                  class="btn btn--raised btn--icon"
          >
            <span class="btn__content">
              15
            </span>
          </button>
        </td>
        <td>
          <button type="button"
                  class="btn btn--raised btn--icon"
          >
            <span class="btn__content">
              16
            </span>
          </button>
        </td>
        <td>
          <button type="button"
                  class="btn btn--raised btn--icon"
          >
            <span class="btn__content">
              17
            </span>
          </button>
        </td>
        <td>
          <button type="button"
                  class="btn btn--raised btn--icon"
          >
            <span class="btn__content">
              18
            </span>
          </button>
        </td>
        <td>
          <button type="button"
                  class="btn btn--raised btn--icon"
          >
            <span class="btn__content">
              19
            </span>
          </button>
        </td>
        <td>
          <button type="button"
                  class="btn btn--raised btn--icon"
          >
            <span class="btn__content">
              20
            </span>
          </button>
        </td>
      </tr>
      <tr>
        <td>
          <button type="button"
                  class="btn btn--raised btn--icon"
          >
            <span class="btn__content">
              21
            </span>
          </button>
        </td>
        <td>
          <button type="button"
                  class="btn btn--raised btn--icon"
          >
            <span class="btn__content">
              22
            </span>
          </button>
        </td>
        <td>
          <button type="button"
                  class="btn btn--raised btn--icon"
          >
            <span class="btn__content">
              23
            </span>
          </button>
        </td>
        <td>
          <button type="button"
                  class="btn btn--raised btn--icon"
          >
            <span class="btn__content">
              24
            </span>
          </button>
        </td>
        <td>
          <button type="button"
                  class="btn btn--raised btn--icon"
          >
            <span class="btn__content">
              25
            </span>
          </button>
        </td>
        <td>
          <button type="button"
                  class="btn btn--raised btn--icon"
          >
            <span class="btn__content">
              26
            </span>
          </button>
        </td>
        <td>
          <button type="button"
                  class="btn btn--raised btn--icon"
          >
            <span class="btn__content">
              27
            </span>
          </button>
        </td>
      </tr>
      <tr>
        <td>
          <button type="button"
                  class="btn btn--raised btn--icon"
          >
            <span class="btn__content">
              28
            </span>
          </button>
        </td>
        <td>
          <button type="button"
                  class="btn btn--raised btn--icon"
          >
            <span class="btn__content">
              29
            </span>
          </button>
        </td>
        <td>
          <button type="button"
                  class="btn btn--raised btn--icon"
          >
            <span class="btn__content">
              30
            </span>
          </button>
        </td>
        <td>
          <button type="button"
                  class="btn btn--raised btn--icon"
          >
            <span class="btn__content">
              31
            </span>
          </button>
        </td>
      </tr>
      <tr>
        <td>
          &nbsp;
        </td>
      </tr>
    </tbody>
  </table>
</div>

`;

exports[`VDatePicker.js should match snapshot with slot 1`] = `

<div class="picker picker--date card"
     style="height: auto;"
     data-ripple="false"
>
  <div class="picker__title primary">
    <div class="picker--date__title-year">
      2005
    </div>
    <div class="picker--date__title-date active">
      <div>
        Tue, Nov 1
      </div>
    </div>
  </div>
  <div class="picker__body">
    <div class="picker--date__header">
      <div class="picker--date__header-selector">
        <button type="button"
                class="btn btn--icon"
                data-ripple="true"
        >
          <div class="btn__content">
            <i aria-hidden="true"
               class="material-icons icon"
               style="font-size: 24px;"
            >
              chevron_left
            </i>
          </div>
        </button>
        <div class="picker--date__header-selector-date">
          <strong class="accent--text">
            November 2005
          </strong>
        </div>
        <button type="button"
                class="btn btn--icon"
                data-ripple="true"
        >
          <div class="btn__content">
            <i aria-hidden="true"
               class="material-icons icon"
               style="font-size: 24px;"
            >
              chevron_right
            </i>
          </div>
        </button>
      </div>
    </div>
    <div class="picker--date__table">
      <table>
        <thead>
          <tr>
            <th>
              S
            </th>
            <th>
              M
            </th>
            <th>
              T
            </th>
            <th>
              W
            </th>
            <th>
              T
            </th>
            <th>
              F
            </th>
            <th>
              S
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td>
            </td>
            <td>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon btn--active accent"
              >
                <span class="btn__content">
                  1
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon"
              >
                <span class="btn__content">
                  2
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon"
              >
                <span class="btn__content">
                  3
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon"
              >
                <span class="btn__content">
                  4
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon"
              >
                <span class="btn__content">
                  5
                </span>
              </button>
            </td>
          </tr>
          <tr>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon"
              >
                <span class="btn__content">
                  6
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon"
              >
                <span class="btn__content">
                  7
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon"
              >
                <span class="btn__content">
                  8
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon"
              >
                <span class="btn__content">
                  9
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon"
              >
                <span class="btn__content">
                  10
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon"
              >
                <span class="btn__content">
                  11
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon"
              >
                <span class="btn__content">
                  12
                </span>
              </button>
            </td>
          </tr>
          <tr>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon"
              >
                <span class="btn__content">
                  13
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon"
              >
                <span class="btn__content">
                  14
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon"
              >
                <span class="btn__content">
                  15
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon"
              >
                <span class="btn__content">
                  16
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon"
              >
                <span class="btn__content">
                  17
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon"
              >
                <span class="btn__content">
                  18
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon"
              >
                <span class="btn__content">
                  19
                </span>
              </button>
            </td>
          </tr>
          <tr>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon"
              >
                <span class="btn__content">
                  20
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon"
              >
                <span class="btn__content">
                  21
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon"
              >
                <span class="btn__content">
                  22
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon"
              >
                <span class="btn__content">
                  23
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon"
              >
                <span class="btn__content">
                  24
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon"
              >
                <span class="btn__content">
                  25
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon"
              >
                <span class="btn__content">
                  26
                </span>
              </button>
            </td>
          </tr>
          <tr>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon"
              >
                <span class="btn__content">
                  27
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon"
              >
                <span class="btn__content">
                  28
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon"
              >
                <span class="btn__content">
                  29
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--icon"
              >
                <span class="btn__content">
                  30
                </span>
              </button>
            </td>
          </tr>
          <tr>
            <td>
              &nbsp;
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div class="scoped-slot">
  </div>
</div>

`;

exports[`VDatePicker.js should match snapshot with year icon 1`] = `

<div class="picker__title primary">
  <div class="picker--date__title-year">
    2005
    <i aria-hidden="true"
       class="material-icons icon theme--dark"
       style="font-size: 24px;"
    >
      year
    </i>
  </div>
  <div class="picker--date__title-date active">
    <div>
      Tue, Nov 1
    </div>
  </div>
</div>

`;

exports[`VDatePicker.js should match years snapshot 1`] = `

<div class="picker picker--date card"
     style="height: auto;"
     data-ripple="false"
>
  <div class="picker__title primary">
    <div class="picker--date__title-year active">
      2005
    </div>
    <div class="picker--date__title-date">
      <div>
        Tue, Nov 1
      </div>
    </div>
  </div>
  <div class="picker__body">
    <ul class="picker--date__years">
      <li class>
        2105
      </li>
      <li class>
        2104
      </li>
      <li class>
        2103
      </li>
      <li class>
        2102
      </li>
      <li class>
        2101
      </li>
      <li class>
        2100
      </li>
      <li class>
        2099
      </li>
      <li class>
        2098
      </li>
      <li class>
        2097
      </li>
      <li class>
        2096
      </li>
      <li class>
        2095
      </li>
      <li class>
        2094
      </li>
      <li class>
        2093
      </li>
      <li class>
        2092
      </li>
      <li class>
        2091
      </li>
      <li class>
        2090
      </li>
      <li class>
        2089
      </li>
      <li class>
        2088
      </li>
      <li class>
        2087
      </li>
      <li class>
        2086
      </li>
      <li class>
        2085
      </li>
      <li class>
        2084
      </li>
      <li class>
        2083
      </li>
      <li class>
        2082
      </li>
      <li class>
        2081
      </li>
      <li class>
        2080
      </li>
      <li class>
        2079
      </li>
      <li class>
        2078
      </li>
      <li class>
        2077
      </li>
      <li class>
        2076
      </li>
      <li class>
        2075
      </li>
      <li class>
        2074
      </li>
      <li class>
        2073
      </li>
      <li class>
        2072
      </li>
      <li class>
        2071
      </li>
      <li class>
        2070
      </li>
      <li class>
        2069
      </li>
      <li class>
        2068
      </li>
      <li class>
        2067
      </li>
      <li class>
        2066
      </li>
      <li class>
        2065
      </li>
      <li class>
        2064
      </li>
      <li class>
        2063
      </li>
      <li class>
        2062
      </li>
      <li class>
        2061
      </li>
      <li class>
        2060
      </li>
      <li class>
        2059
      </li>
      <li class>
        2058
      </li>
      <li class>
        2057
      </li>
      <li class>
        2056
      </li>
      <li class>
        2055
      </li>
      <li class>
        2054
      </li>
      <li class>
        2053
      </li>
      <li class>
        2052
      </li>
      <li class>
        2051
      </li>
      <li class>
        2050
      </li>
      <li class>
        2049
      </li>
      <li class>
        2048
      </li>
      <li class>
        2047
      </li>
      <li class>
        2046
      </li>
      <li class>
        2045
      </li>
      <li class>
        2044
      </li>
      <li class>
        2043
      </li>
      <li class>
        2042
      </li>
      <li class>
        2041
      </li>
      <li class>
        2040
      </li>
      <li class>
        2039
      </li>
      <li class>
        2038
      </li>
      <li class>
        2037
      </li>
      <li class>
        2036
      </li>
      <li class>
        2035
      </li>
      <li class>
        2034
      </li>
      <li class>
        2033
      </li>
      <li class>
        2032
      </li>
      <li class>
        2031
      </li>
      <li class>
        2030
      </li>
      <li class>
        2029
      </li>
      <li class>
        2028
      </li>
      <li class>
        2027
      </li>
      <li class>
        2026
      </li>
      <li class>
        2025
      </li>
      <li class>
        2024
      </li>
      <li class>
        2023
      </li>
      <li class>
        2022
      </li>
      <li class>
        2021
      </li>
      <li class>
        2020
      </li>
      <li class>
        2019
      </li>
      <li class>
        2018
      </li>
      <li class>
        2017
      </li>
      <li class>
        2016
      </li>
      <li class>
        2015
      </li>
      <li class>
        2014
      </li>
      <li class>
        2013
      </li>
      <li class>
        2012
      </li>
      <li class>
        2011
      </li>
      <li class>
        2010
      </li>
      <li class>
        2009
      </li>
      <li class>
        2008
      </li>
      <li class>
        2007
      </li>
      <li class>
        2006
      </li>
      <li class="active accent--text">
        2005
      </li>
      <li class>
        2004
      </li>
      <li class>
        2003
      </li>
      <li class>
        2002
      </li>
      <li class>
        2001
      </li>
      <li class>
        2000
      </li>
      <li class>
        1999
      </li>
      <li class>
        1998
      </li>
      <li class>
        1997
      </li>
      <li class>
        1996
      </li>
      <li class>
        1995
      </li>
      <li class>
        1994
      </li>
      <li class>
        1993
      </li>
      <li class>
        1992
      </li>
      <li class>
        1991
      </li>
      <li class>
        1990
      </li>
      <li class>
        1989
      </li>
      <li class>
        1988
      </li>
      <li class>
        1987
      </li>
      <li class>
        1986
      </li>
      <li class>
        1985
      </li>
      <li class>
        1984
      </li>
      <li class>
        1983
      </li>
      <li class>
        1982
      </li>
      <li class>
        1981
      </li>
      <li class>
        1980
      </li>
      <li class>
        1979
      </li>
      <li class>
        1978
      </li>
      <li class>
        1977
      </li>
      <li class>
        1976
      </li>
      <li class>
        1975
      </li>
      <li class>
        1974
      </li>
      <li class>
        1973
      </li>
      <li class>
        1972
      </li>
      <li class>
        1971
      </li>
      <li class>
        1970
      </li>
      <li class>
        1969
      </li>
      <li class>
        1968
      </li>
      <li class>
        1967
      </li>
      <li class>
        1966
      </li>
      <li class>
        1965
      </li>
      <li class>
        1964
      </li>
      <li class>
        1963
      </li>
      <li class>
        1962
      </li>
      <li class>
        1961
      </li>
      <li class>
        1960
      </li>
      <li class>
        1959
      </li>
      <li class>
        1958
      </li>
      <li class>
        1957
      </li>
      <li class>
        1956
      </li>
      <li class>
        1955
      </li>
      <li class>
        1954
      </li>
      <li class>
        1953
      </li>
      <li class>
        1952
      </li>
      <li class>
        1951
      </li>
      <li class>
        1950
      </li>
      <li class>
        1949
      </li>
      <li class>
        1948
      </li>
      <li class>
        1947
      </li>
      <li class>
        1946
      </li>
      <li class>
        1945
      </li>
      <li class>
        1944
      </li>
      <li class>
        1943
      </li>
      <li class>
        1942
      </li>
      <li class>
        1941
      </li>
      <li class>
        1940
      </li>
      <li class>
        1939
      </li>
      <li class>
        1938
      </li>
      <li class>
        1937
      </li>
      <li class>
        1936
      </li>
      <li class>
        1935
      </li>
      <li class>
        1934
      </li>
      <li class>
        1933
      </li>
      <li class>
        1932
      </li>
      <li class>
        1931
      </li>
      <li class>
        1930
      </li>
      <li class>
        1929
      </li>
      <li class>
        1928
      </li>
      <li class>
        1927
      </li>
      <li class>
        1926
      </li>
      <li class>
        1925
      </li>
      <li class>
        1924
      </li>
      <li class>
        1923
      </li>
      <li class>
        1922
      </li>
      <li class>
        1921
      </li>
      <li class>
        1920
      </li>
      <li class>
        1919
      </li>
      <li class>
        1918
      </li>
      <li class>
        1917
      </li>
      <li class>
        1916
      </li>
      <li class>
        1915
      </li>
      <li class>
        1914
      </li>
      <li class>
        1913
      </li>
      <li class>
        1912
      </li>
      <li class>
        1911
      </li>
      <li class>
        1910
      </li>
      <li class>
        1909
      </li>
      <li class>
        1908
      </li>
      <li class>
        1907
      </li>
      <li class>
        1906
      </li>
    </ul>
  </div>
</div>

`;
